Fixes missing function and nav visibility (#9107)

--- a/app/assets/v2/scss/onboard.scss
+++ b/app/assets/v2/scss/onboard.scss
@@ -110,11 +110,6 @@ h3 {
   display: block;
 }
 
-#navbarSupportedContent .nav-link,
-#navbarSupportedContent img {
-  visibility: hidden;
-}
-
 .button--controls {
   display: inline-block;
   margin: 5px 0 5px 5px;
